@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.10.16-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-16 09:07:08, took 00:13:38, with 50 workers, on 4054 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2025-10-16 10:22:21, took 00:19:53, with 50 workers, on 4054 cases, 1 failed, 0 traces, 9 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1077,7 +1077,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard02.tst">crypt-wireguard02.tst</a></td><td>success</td><td>wireguard over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard03.tst">crypt-wireguard03.tst</a></td><td>success</td><td>wireguard over wireguard</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard04.tst">crypt-wireguard04.tst</a></td><td>success</td><td>wireguard over loopback</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard05.tst">crypt-wireguard05.tst</a></td><td>success</td><td>wireguard over asymmetric ports</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard05.tst">crypt-wireguard05.tst</a></td><td>#6-run-r1 tping 100 10 2.2.2.2 vrf v1</td><td>wireguard over asymmetric ports</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/demo01.tst">demo01.tst</a></td><td>success</td><td>empty demo network</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/demo02.tst">demo02.tst</a></td><td>success</td><td>addressed demo network</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-bgp01.tst">intop1-bgp01.tst</a></td><td>success</td><td>interop1: ebgp</td></tr>
