@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.10.16-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-10-16 09:19:23, took 00:11:50, with 50 workers, on 844 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2025-10-16 10:34:49, took 00:12:02, with 50 workers, on 844 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
