@@ -17594,3 +17594,6 @@ failed: wireguard over asymmetric ports
 ---------------------------------- 2025-10-15 05:01:24 25.10.15
 no failed: wireguard over asymmetric ports
 qc pass: wireguard over asymmetric ports
+---------------------------------- 2025-10-16 10:02:28 25.10.16
+no qc pass: wireguard over asymmetric ports
+failed: wireguard over asymmetric ports
